force-app/main/default/objects/Address__c/fields/Alpha2__c.field-meta.xml
<CustomField>
    <fullName>Alpha2__c</fullName>
    <label>Alpha2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AF</fullName>
            </value>
            <value>
                <fullName>AX</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>DZ</fullName>
            </value>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>AQ</fullName>
            </value>
            <value>
                <fullName>AG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>