force-app/main/default/objects/Address__c/fields/Alpha3__c.field-meta.xml
<CustomField>
    <fullName>Alpha3__c</fullName>
    <label>Alpha3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Alpha2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFG</fullName>
            </value>
            <value>
                <fullName>ALA</fullName>
            </value>
            <value>
                <fullName>ALB</fullName>
            </value>
            <value>
                <fullName>DZA</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AIA</fullName>
            </value>
            <value>
                <fullName>ATA</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>