force-app/main/default/objects/Address__c/fields/ISO_Address_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Address_Code__c</fullName>
    <label>ISO Address Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>