force-app/main/default/objects/Address__c/fields/UN_Code__c.field-meta.xml
<CustomField>
    <fullName>UN_Code__c</fullName>
    <label>UN Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Alpha3__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>248</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>012</fullName>
            </value>
            <value>
                <fullName>016</fullName>
            </value>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>024</fullName>
            </value>
            <value>
                <fullName>660</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>028</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>